--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
 	<meta name="description" content="Bootstrap Documentation Template For Software Developers">
 	<meta name="author" content="Xiaoying Riley at 3rd Wave Media">
 	<link rel="shortcut icon" href="favicon.ico">
-
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-NEMCHTG86Y"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+		gtag('config', 'G-NEMCHTG86Y');
+	</script>
 	<!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&display=swap" rel="stylesheet">
-
 	<!-- FontAwesome JS-->
 	<script src="https://kit.fontawesome.com/5ae6879468.js" crossorigin="anonymous"></script>
-
 	<!-- Theme CSS -->
 	<link id="theme-style" rel="stylesheet" href="assets/css/theme.css">
 	<link id="theme-style" rel="stylesheet" href="assets/css/app.css">
-
 </head>
 
 <body>
