--- a/docs.html
+++ b/docs.html
@@ -7,8 +7,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Bootstrap 4 Template For Software Startups">
-	<meta name="author" content="Xiaoying Riley at 3rd Wave Media">
+	<meta name="description" content="Using Golang, Docker, and Kubernetes">
+	<meta name="author" content="Matt J. Wiater">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-NEMCHTG86Y"></script>
