--- a/docs.html
+++ b/docs.html
@@ -10,6 +10,13 @@
 	<meta name="description" content="Using Golang, Docker, and Kubernetes">
 	<meta name="author" content="Matt J. Wiater">
 	<link rel="shortcut icon" href="favicon.ico">
+	<!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-NZCKWQM');</script>
+	<!-- End Google Tag Manager -->
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-NEMCHTG86Y"></script>
 	<script>
@@ -31,6 +38,10 @@
 </head>
 
 <body class="docs-page">
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NZCKWQM"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 	<header class="header fixed-top">
 		<div class="branding docs-branding">
 			<div class="container-fluid position-relative py-2">
