grammar error fix

--- a/docs.html
+++ b/docs.html
@@ -160,10 +160,9 @@
 							<h3>Why Golang?</h3>
 							</p>
 							<p>In my career at agencies and startups, rapid prototyping is essential. Ruby tended to by the language
-								of choice for may of these projects, as it's easy to get something built quickly, and if you follow
+								of choice for many of these projects, as it's easy to get something built quickly, and if you follow
 								style guidelines, easy to read. But as these sites and apps began to scale, runtime speed, the need for
-								concurrency, memory management,
-								and throughput became common bottlenecks with Ruby.
+								concurrency, memory management, and throughput became common bottlenecks with Ruby. Note: I'm not language-bashing here&mdash;I still use Ruby on a daily basis&mdash;<i>but there's never a single language that's right for all projects.</i>
 							</p>
 							<p>Go is a statically typed and compiled language. While not as easy as Ruby was to jump in and create
 								working proof-of-concepts from the start, the fundamentals of the language made sense. Once you get the
