favicon, opengraph tags

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Using Golang, Docker, and Kubernetes">
 	<meta name="author" content="Matt J. Wiater">
+	<meta property='og:title' content='Creating a compiled Golang binary for use in a minimal Docker container'/>
+	<meta property='og:image' content='https://miro.medium.com/v2/resize:fit:4800/format:png/1*srFZCHVdkViIS46gAzbYgw.png'/>
+	<meta property='og:description' content='Using Golang, Docker, and Kubernetes'/>
+	<meta property='og:url' content='https://mwiater.github.io/golangdocker'/>
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- Google Tag Manager -->
 	<script>(function (w, d, s, l, i) {
@@ -28,6 +32,11 @@
 	<!-- Theme CSS -->
 	<link id="theme-style" rel="stylesheet" href="assets/css/theme.css">
 	<link id="theme-style" rel="stylesheet" href="assets/css/app.css">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
