updating og tags

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta name="author" content="Matt J. Wiater">
 	<meta property='og:title' content='Creating a compiled Golang binary for use in a minimal Docker container'/>
 	<meta property='og:image' content='https://miro.medium.com/v2/resize:fit:4800/format:png/1*srFZCHVdkViIS46gAzbYgw.png'/>
-	<meta property='og:description' content='Using Golang, Docker, and Kubernetes'/>
+	<meta property='og:description' content='Using compiled Golang apps, Docker, and Kubernetes together for portability, consistency, and scalability'/>
 	<meta property='og:url' content='https://mwiater.github.io/golangdocker'/>
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- Google Tag Manager -->
