updating og image, linked from repository

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="description" content="Using Golang, Docker, and Kubernetes">
 	<meta name="author" content="Matt J. Wiater">
 	<meta property='og:title' content='Creating a compiled Golang binary for use in a minimal Docker container'/>
-	<meta property='og:image' content='https://miro.medium.com/v2/resize:fit:4800/format:png/1*srFZCHVdkViIS46gAzbYgw.png'/>
+	<meta property='og:image' content='https://raw.githubusercontent.com/mwiater/golangdocker/main/_repository_assets/golangdocker-og-image.png'/>
 	<meta property='og:description' content='Using compiled Golang apps, Docker, and Kubernetes together for portability, consistency, and scalability'/>
 	<meta property='og:url' content='https://mwiater.github.io/golangdocker'/>
 	<link rel="shortcut icon" href="favicon.ico">
