--- a/docs.html
+++ b/docs.html
@@ -12,7 +12,8 @@
 	<meta property='og:title' content='Creating a compiled Golang binary for use in a minimal Docker container'/>
 	<meta property='og:image' content='https://raw.githubusercontent.com/mwiater/golangdocker/main/_repository_assets/golangdocker-og-image.png'/>
 	<meta property='og:description' content='Using compiled Golang apps, Docker, and Kubernetes together for portability, consistency, and scalability'/>
-	<meta property='og:url' content='https://mwiater.github.io/golangdocker/docs.html'/>
+	<meta property='og:url' content='https://mwiater.github.io/golangdocker/'/>
+	<meta property="og:type" content="website" />
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- Google Tag Manager -->
 	<script>(function (w, d, s, l, i) {
