devgenius article reference in docs

--- a/docs.html
+++ b/docs.html
@@ -191,9 +191,10 @@
 							<p>Breaking down application components into separate, unique services allows the engineer to work within
 								confined, single-purpose environments. This is in opposition to singular monoliths, where chipping away
 								in one section of the code can have negative cascading consequences within the rest of the application
-								due to internal dependencies. I often follow the <b><a href target="_blank"
+								due to internal dependencies. I often follow the <b><a target="_blank"
 										href="https://12factor.net/">12 Factor App</a></b> methodology, which does a great job of explaining
-								the details, architecture, and reasoning behind the process.
+								the details, architecture, and reasoning behind the process. For a companion piece about how this project specifically relates to the 12-factor-app, see my article on DevGenius: <b><a target="_blank"
+								href="https://blog.devgenius.io/creating-a-compiled-golang-binary-for-use-in-a-minimal-docker-container-ae1c5a720aab">Creating a compiled Golang binary for use in a minimal Docker container as defined by the 12 Factor App methodology</a></b>. 
 							</p>
 							<p>Using Docker properly can ease you into creating 12 Factor applications by forcing the engineer to
 								think about not only breaking down an app into microservices, but also the potential application
