added article ref

--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
 			<div class="page-intro single-col-max mx-auto">Get to know Golang, Docker, and Kubernetes by creating, testing,
 				documenting, and deploying a useable boilerplate API.
 			</div>
+
+			<div class="page-intro single-col-max mx-auto" style="margin-top:10px;font-size:1em;">For information on how this project relates to the <strong>12-factor-app methodology</strong>, see my article: <strong><a style="color:#ffffff;" target="_blank" href="https://medium.com/dev-genius/creating-a-compiled-golang-binary-for-use-in-a-minimal-docker-container-ae1c5a720aab">Creating a compiled Golang binary for use in a minimal Docker container as defined by the 12 Factor App methodology</a></strong>
+			</div>
+
+			
+			
 		</div>
 	</div><!--//page-header-->
 
