--- a/docs.html
+++ b/docs.html
@@ -252,8 +252,8 @@
 					<section class="docs-section" id="golang-application-topics">
 						<h2 class="section-heading">Project Topics</h2>
 						<p>This project is in three distinct parts, each which build on the previous:</p>
-						<h5 id="1-a-simple-but-functioanl-rest-api-app-written-in-go-this-rest-api-incorporates-">1) A simple but
-							functioanl <a href="#golang-application-run">rest API app written in Go</a>. This rest API incorporates:
+						<h5 id="1-a-simple-but-functional-rest-api-app-written-in-go-this-rest-api-incorporates-">1) A simple but
+							functional <a href="#golang-application-run">rest API app written in Go</a>. This rest API incorporates:
 						</h5>
 						<ul>
 							<li>The <a href="https://docs.gofiber.io/api/middleware/monitor">Fiber Monitor middleware</a> (API
